# iris-client

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  iris_client.py  pyproject.toml  test_iris_client.py
.github/workflows/: pypi.yml  tests.yml
iris_client/: __init__.py  client.py  constants.py  logger.py
tests/: test_iris_client.py
