[tool.poetry]
name = "dioptra-iris-client"
version = "0.4.0"
description = "Python client for the Iris API."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/iris-client"
packages = [{ include = "iris_client.py" }]

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "^0.15.5"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
