[tool.poetry]
name = "dioptra-iris-client"
version = "0.5.0"
description = "Python client for the Iris API."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/iris-client"
packages = [{ include = "iris_client" }]

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "^1.2.1"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pre-commit = "^3.5.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
